Done CRUD for Director
